Fixed UI Issues such as buttons being cut off

--- a/lous_list/static/base.css
+++ b/lous_list/static/base.css
@@ -39,7 +39,7 @@ input[type="text"] {
 .search-bar {
   width: 100%;
   max-width: 500px;
-  background-color: rgba(255,255,255,0.2);
+  background-color: rgb(251 255 253);;
   display: flex;
   align-items: center;
   border-radius: 60px;
@@ -52,7 +52,7 @@ input[type="text"] {
   outline: none;
   /* padding: 24px 20px; */
   font-size: 15px;
-  color: white;
+  color: black;
   backdrop-filter: blur(4px) saturate;
 }
 
